--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -73,6 +73,9 @@
           <pointsize>16</pointsize>
          </font>
         </property>
+        <property name="echoMode">
+         <enum>QLineEdit::Password</enum>
+        </property>
        </widget>
       </item>
       <item>
